--- a/index.html
+++ b/index.html
@@ -1,89 +1,202 @@
 <!DOCTYPE html>
-<html lang="id">
+<html amp lang="id">
 <head>
+    <meta name="google-site-verification" content="1NOp4rLjoIskmsCq5UZdgZmuZ_7UPtGua3lBMeUaHX4" />
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>TASIK TOTO | TASIKTOTO Platform Masa Kini Untuk Pencinta Toto Macau 2025</title>
-    <meta name="description" content="TASIKTOTO adalah agen terpercaya yang menyediakan link toto gacor dan platform togel online 4D terbesar.">
-    <link rel="amphtml" href="https://kobani.co/"> <!-- LINK KE VERSI AMP -->
+    <meta name="format-detection" content="telephone=no">
+    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script async src="https://cdn.ampproject.org/v0.js"></script>
+    <link rel="canonical" href="https://www.4ohto.com/">
     <link rel="shortcut icon" href="https://i.imgur.com/N0hJcBT.png" type="image/x-icon">
-    <style>
+    <title>TASIKTOTO | TASIK TOTO Platform Terbaik & Terpopuler untuk Pecinta Togel Online</title>
+    <meta name="title" content="TASIKTOTO | TASIK TOTO Platform Terbaik & Terpopuler untuk Pecinta Togel Online">
+    <meta name="description" content="TASIKTOTO adalah platform terpercaya yang menyediakan link toto gacor dan platform togel online 4D terbesar.">
+    <style amp-boilerplate>
         body {
-            background:url('https://i.imgur.com/YNGN97L.png') no-repeat center center fixed;
-            background-size: cover;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            color: #dfdfdf;
-            text-align: center;
+            -webkit-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
+            -moz-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
+            -ms-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
+            animation: -amp-start 8s steps(1, end) 0s 1 normal both;
+        }
+        @-webkit-keyframes -amp-start { from { visibility: hidden } to { visibility: visible } }
+        @-moz-keyframes -amp-start { from { visibility: hidden } to { visibility: visible } }
+        @-ms-keyframes -amp-start { from { visibility: hidden } to { visibility: visible } }
+        @-o-keyframes -amp-start { from { visibility: hidden } to { visibility: visible } }
+        @keyframes -amp-start { from { visibility: hidden } to { visibility: visible } }
+    </style>
+    <noscript>
+        <style amp-boilerplate>
+            body {
+                -webkit-animation: none;
+                -moz-animation: none;
+                -ms-animation: none;
+                animation: none;
+            }
+        </style>
+    </noscript>
+    <style amp-custom>
+        .atasbox, .center, .footer { text-align: center }
+        * { box-sizing: border-box; margin: 0; padding: 0 }
+        :focus { outline: 0 }
+        ::-webkit-scrollbar { display: none }
+        a, a:after, a:hover, a:visited { text-decoration: none; color: #dfdfdf; }
+        html {
             max-width: 500px;
             margin: 0 auto;
-            padding: 20px;
+            background-repeat: no-repeat;
+            background-position: center;
+            background-attachment: fixed;
+            background-image: linear-gradient(#313131, #000);
         }
-
+        body {
+            color: #dfdfdf;
+            background-image: url('https://i.imgur.com/YNGN97L.png');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
         h2 {
             margin: 20px;
             padding: 10px;
             background-color: #1f1f1f;
+            border-bottom: 2px solid transparent;
+            background-image: linear-gradient(#313131, #000), radial-gradient(circle at left top, #fc0202, #a424be);
+            background-origin: border-box;
+            background-clip: padding-box, border-box;
             border-radius: 10px;
-            color: #fff;
         }
-
-        a.button {
-            display: inline-block;
-            margin: 10px 0;
-            padding: 12px 25px;
-            border-radius: 25px;
+        button {
+            margin: 5px 5px 50px 5px;
+            width: 50%; height: 40px;
+            background-image: linear-gradient(#494949, #2e2e2e);
+            color: #b6b6b6;
+            font-size: 0.8em;
+            border-radius: 10px;
             font-weight: bold;
-            text-transform: uppercase;
-            text-decoration: none;
-            background-image: linear-gradient(#313131, #000), radial-gradient(circle at left top, #fc9002, #fbff02);
+            transition: 0.5s all;
+        }
+        button:hover {
+            border-bottom: 2px solid transparent;
+            background-image: linear-gradient(#313131, #000), radial-gradient(circle at left top, #fc0202, #a424be);
             background-origin: border-box;
             background-clip: padding-box, border-box;
             color: #fff;
+        }
+        .atas { display: grid; min-height: 85vh; }
+        .atasbox { margin: auto; }
+        .ataslink {
+            display: inline-grid;
+            margin: 1rem;
+        }
+        .ataslink a {
+            margin: 0 0 20px 0;
+            color: #fff;
+            position: relative;
+            font-size: 0.8em;
+            font-weight: bold;
+            text-transform: uppercase;
+            padding: 16px 35px;
+            border-radius: 25px;
+            overflow: hidden;
+            border: 3px double transparent;
+            background-image: linear-gradient(#313131, #000), radial-gradient(circle at left top, #fc9002, #fbff02);
+            background-origin: border-box;
+            background-clip: padding-box, border-box;
             transition: 0.5s all;
         }
-
-        a.button:hover {
+        .ataslink a:hover {
             color: #1f1f1f;
-            background-image: linear-gradient(#fc9002, #fbff02), radial-gradient(circle at left top, #fc9002, #fbff02);
+            background-image: linear-gradient(#fc9002, #fbff02), radial-gradient(circle at left top, #fc9002, #fbff02)
         }
-
-        img.imghero {
-            max-width: 100%;
-            height: auto;
+        .debar {
+            animation: 1.5s ease 0s infinite beat;
+            margin: 0px 25px 0 25px;
+        }
+        @keyframes beat {
+            0%, 50%, 100% { transform: scale(1, 1); }
+            30%, 80% { transform: scale(0.92, 0.95); }
+        }
+        .center { margin-bottom: 10px }
+        .imghero {
             border-radius: 8px;
             border: 2px solid #fff;
-            margin: 20px 0;
+            margin: 1rem;
         }
-
-        .copyright {
+        .footer {
+            position: absolute;
+            left: 0;
+            bottom: 50;
+            width: 100%;
             font-size: 0.7em;
-            color: #ffffff96;
-            margin-top: 40px;
         }
-
+        .container {
+            max-width: 400px;
+            height: 100vh;
+            margin: 0 auto;
+            padding: 15px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            overflow: hidden;
+        }
+        .copyright {
+            text-align: center;
+            color: #ffffff96;
+        }
+        /* Teks berjalan */
+        .marquee-text {
+            color: yellow;
+            font-weight: bold;
+            background-color: #1f1f1f;
+            padding: 5px;
+            font-size: 14px;
+        }
     </style>
 </head>
 <body>
 
-    <header>
-        <a href="https://tasiktoto.pro/alternatif">
-            <img src="https://lai-siopuh.com/img/logo.gif" alt="Tasiktoto" width="150" height="50">
-        </a>
-    </header>
+    <!-- Marquee di atas main -->
+    <marquee behavior="scroll" direction="left" class="marquee-text">
+        🎰 Selamat Datang Di TASIKTOTO - Bandar Togel Dan Slot Online Terpercaya | Promo Menarik Setiap Hari | Deposit & Withdraw Satt-Seet | LINK RESMI TASIKTOTO → tasiktoto-resmi.com 🎰
+    </marquee>
 
     <main>
-        <img class="imghero" src="https://i.imgur.com/PNJR4xt.png" alt="tasiktoto">
+        <div class="atas">
+            <div class="atasbox">
+                <div class="container">
 
-        <div>
-            <a href="https://lovelcute.com/register?referral_code=ref4oht" class="button">DAFTAR TASIKTOTO</a>
-            <a href="https://tasiktoto.pro/alternatif" class="button">LOGIN TASIKTOTO</a>
-            <a href="https://tasiktoto.pro/alternatif" class="button">LIVE CHAT TASIKTOTO</a>
+                    <!-- Logo DIHAPUS -->
+
+                    <div>
+                        <amp-img class="imghero" height="700" width="700" layout="responsive" alt="tasiktoto"
+                            src="https://i.imgur.com/PNJR4xt.png"></amp-img>
+                    </div>
+
+                    <div class="ataslink">
+                        <a href="https://tasiktoto.pro/alternatif" class="slot-demo" rel="nofollow">
+                            <div class="debar">DAFTAR TASIKTOTO</div>
+                        </a>
+                        <a href="https://tasiktoto.pro/alternatif" class="slot-demo" rel="nofollow">
+                            <div class="debar">LOGIN TASIKTOTO</div>
+                        </a>
+                        <a href="https://tasiktoto.pro/alternatif" class="slot-demo" rel="nofollow">
+                            <div class="debar">LIVE CHAT TASIKTOTO</div>
+                        </a>
+                    </div>
+
+                    <div>
+                        <p class="copyright">© 2025 • 
+                            <a style="color: yellow;" href="https://tasiktoto.pro/alternatif">TASIKTOTO</a> | 乇丂1306 • All Rights Reserved.
+                        </p>
+                    </div>
+
+                </div>
+            </div>
         </div>
     </main>
-
-    <footer>
-        <p class="copyright">© 2025 • <a style="color: yellow;" href="https://tasiktoto.pro/alternatif/">TASIKTOTO</a> | 乇丂1306 • All Rights Reserved.</p>
-    </footer>
 
 </body>
 </html>
