--- a/index.html
+++ b/index.html
@@ -146,29 +146,18 @@
             text-align: center;
             color: #ffffff96;
         }
-        /* Teks berjalan */
-        .marquee-text {
-            color: yellow;
-            font-weight: bold;
-            background-color: #1f1f1f;
-            padding: 5px;
-            font-size: 14px;
-        }
     </style>
 </head>
 <body>
-
-    <!-- Marquee di atas main -->
-    <marquee behavior="scroll" direction="left" class="marquee-text">
-        🎰 Selamat Datang Di TASIKTOTO - Bandar Togel Dan Slot Online Terpercaya | Promo Menarik Setiap Hari | Deposit & Withdraw Satt-Seet | LINK RESMI TASIKTOTO → tasiktoto-resmi.com 🎰
-    </marquee>
-
     <main>
         <div class="atas">
             <div class="atasbox">
                 <div class="container">
 
-                    <!-- Logo DIHAPUS -->
+                    <!-- Logo Baru -->
+                    <div style="margin-bottom: 20px;">
+                        <amp-img src="https://lai-siopuh.com/img/logo.gif" width="300" height="100" layout="fixed" alt="Logo TASIKTOTO"></amp-img>
+                    </div>
 
                     <div>
                         <amp-img class="imghero" height="700" width="700" layout="responsive" alt="tasiktoto"
@@ -197,6 +186,5 @@
             </div>
         </div>
     </main>
-
 </body>
 </html>
