--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     <link rel="canonical" href="https://www.4ohto.com/">
-    <link rel="shortcut icon" href="https://i.imgur.com/N0hJcBT.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://siopuh-song.com/favicon.png" type="image/x-icon">
     <title>TASIKTOTO | TASIK TOTO Platform Terbaik & Terpopuler untuk Pecinta Togel Online</title>
     <meta name="title" content="TASIKTOTO | TASIK TOTO Platform Terbaik & Terpopuler untuk Pecinta Togel Online">
     <meta name="description" content="TASIKTOTO adalah platform terpercaya yang menyediakan link toto gacor dan platform togel online 4D terbesar.">
