--- a/tasiktoto-amp/index.html
+++ b/tasiktoto-amp/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html amp lang="id">
 <head>
     <meta name="google-site-verification" content="1NOp4rLjoIskmsCq5UZdgZmuZ_7UPtGua3lBMeUaHX4" />
