--- a/tasiktoto1-amp/index.html
+++ b/tasiktoto1-amp/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="TASIKTOTO adalah situs togel dan slot online terpercaya di Indonesia dengan pasaran lengkap, slot gacor, transaksi cepat, dan layanan 24 jam." />
     <meta name="robots" content="index,follow" />
     <link rel="shortcut icon" href="https://siopuh-song.com/favicon.png" type="image/x-icon" />
-    <link rel="canonical" href="https://kobani.co/tasiktoto1-amp/index.html" />
+    <link rel="canonical" href="https://carklik.id/" />
     <meta property="og:url" content="https://carklik.id/" />
     <meta property="og:site_name" content="TASIKTOTO" />
     <meta property="og:image:alt" content="TASIKTOTO" />
