--- a/tasiktoto3-amp/index.html
+++ b/tasiktoto3-amp/index.html
@@ -164,4 +164,9 @@
 
     <p class="copyright">
       © copyright 2025 • 
+      <a style="color: #00e0fd;" href="https://tasiktoto.pro/alternatif">@TASIKTOTO</a> • 乇丂1306 • All Rights Reserved
+    </p>
+  </div>
+</body>
+</html>
 
