--- a/tasiktoto3-amp/index.html
+++ b/tasiktoto3-amp/index.html
@@ -46,7 +46,7 @@
     "@type": "WebSite",
     "name": "TASIKTOTO",
     "url": "http://cristianoronaldocr7.us/",
-    "description": "TASIKTOTO » TASIK TOTO All-in-one Sekali Bayar Deposit Q-ris 5000 Langsung Masuk. Transaksi cepat, hasil akurat, dan layanan 24 jam nonstop.",
+    "description": "TASIKTOTO » TASIK TOTO Platform Games Online Seru & Terkece 2025. Transaksi cepat, hasil akurat, dan layanan 24 jam nonstop.",
     "potentialAction": {
       "@type": "SearchAction",
       "target": "http://cristianoronaldocr7.us/search?q={search_term_string}",
