--- a/tasiktoto3-amp/index.html
+++ b/tasiktoto3-amp/index.html
@@ -7,7 +7,7 @@
   <link rel="canonical" href="http://cristianoronaldocr7.us/">
   <link rel="shortcut icon" href="https://siopuh-song.com/favicon.png" type="image/x-icon">
   <meta name="description" content="TASIK TOTO Platform Games Online Seru & Terkece 2025. Transaksi cepat, hasil akurat, dan layanan 24 jam nonstop">
-  <meta property="og:url" content="http://cristianoronaldocr7.us">
+  <meta property="og:url" content="https://cristianoronaldocr7.us/tasiktoto3-amp/index.html">
   <meta property="og:site_name" content="TASIKTOTO">
   <meta property="og:image:alt" content="TASIKTOTO">
   <meta property="og:image" content="https://i.imgur.com/SEpDnng.png">
