--- a/tasiktoto3-amp/index.html
+++ b/tasiktoto3-amp/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html amp lang="id">
 <head>
+  <meta name="google-site-verification" content="1NOp4rLjoIskmsCq5UZdgZmuZ_7UPtGua3lBMeUaHX4" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <title>TASIKTOTO » TASIK TOTO Platform Games Online Seru & Terkece 2025</title>
