--- a/tasiktoto4-amp/index.html
+++ b/tasiktoto4-amp/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-  <title>TASIKTOTO » TASIK TOTO Bandar Toto Macau Resmi Terpercaya 2025</title>
+  <title>TASIKTOTO | TASIK TOTO Bandar Toto Macau Resmi Nomor #1 di Indonesia</title>
   <link rel="canonical" href="https://q8you.com/">
   <link rel="shortcut icon" href="https://siopuh-song.com/favicon.png" type="image/x-icon">
   <meta name="description" content="TASIKTOTO adalah bandar Toto Macau resmi dan terpercaya 2025, menyediakan layanan pasang togel online aman, cepat, dan terpercaya untuk semua pemain.">
