--- a/tasiktoto-amp/index.html
+++ b/tasiktoto-amp/index.html
@@ -11,7 +11,7 @@
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     <link rel="canonical" href="https://4ohto.com/">
     <link rel="shortcut icon" href="https://siopuh-song.com/favicon.png" type="image/x-icon">
-    <title>TASIKTOTO | TASIK TOTO Platform Terbaik & Terpopuler untuk Pecinta Togel Online</title>
+    <title>TASIK TOTO ✈️ TASIKTOTO Platform Terbaik & Terpopuler untuk Pecinta Togel Online</title>
     <meta name="title" content="TASIKTOTO | TASIK TOTO Platform Terbaik & Terpopuler untuk Pecinta Togel Online">
     <meta name="description" content="TASIKTOTO adalah platform terpercaya yang menyediakan link toto gacor dan platform togel online 4D terbesar.">
     <style amp-boilerplate>
