--- a/tasiktoto4-amp/index.html
+++ b/tasiktoto4-amp/index.html
@@ -4,10 +4,10 @@
   <meta name="google-site-verification" content="1NOp4rLjoIskmsCq5UZdgZmuZ_7UPtGua3lBMeUaHX4" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-  <title>TASIKTOTO | TASIK TOTO Bandar Toto Macau Resmi Nomor #1 di Indonesia</title>
+  <title>TASIKTOTO | TASIK TOTO Bandar Togel Toto Macau Resmi Nomor #1 di Indonesia</title>
   <link rel="canonical" href="https://q8you.com/">
   <link rel="shortcut icon" href="https://siopuh-song.com/favicon.png" type="image/x-icon">
-  <meta name="description" content="TASIKTOTO adalah bandar Toto Macau resmi dan terpercaya 2025, menyediakan layanan pasang togel online aman, cepat, dan terpercaya untuk semua pemain.">
+  <meta name="description" content="TASIKTOTO adalah bandar Togel Toto Macau resmi dan terpercaya 2025, menyediakan layanan pasang togel online aman, cepat, dan terpercaya untuk semua pemain.">
   <meta property="og:url" content="https://q8you.com/">
   <meta property="og:site_name" content="TASIKTOTO">
   <meta property="og:image:alt" content="TASIKTOTO">
