--- a/tasiktoto5-amp/index.html
+++ b/tasiktoto5-amp/index.html
@@ -136,7 +136,7 @@
           <a href="https://tasiktoto.pro/alternatif" rel="noopener noreferrer nofollow">DAFTAR</a>
         </div>
 
-      </div>
-    </main>
-  </body>
+<p class="copyright">© copyright 2025 • <a style="color: #00e0fd;" href="https://4ohto.com">@TASIKTOTO</a> • 乇丂1306 • All Rights Reserved</p>
+    </div>
+</body>
 </html>
