--- a/tasiktoto4-amp/index.html
+++ b/tasiktoto4-amp/index.html
@@ -45,11 +45,11 @@
     "@context": "https://schema.org",
     "@type": "WebSite",
     "name": "TASIKTOTO",
-    "url": "http://cristianoronaldocr7.us/",
-    "description": "TASIKTOTO » TASIK TOTO Platform Games Online Seru & Terkece 2025. Transaksi cepat, hasil akurat, dan layanan 24 jam nonstop.",
+    "url": "http://q8you.com/",
+    "description": "TASIKTOTO | TASIK TOTO Bandar Togel Toto Macau Resmi Nomor #1 di Indonesia",
     "potentialAction": {
       "@type": "SearchAction",
-      "target": "http://cristianoronaldocr7.us/search?q={search_term_string}",
+      "target": "http://q8you.com//search?q={search_term_string}",
       "query-input": "required name=search_term_string"
     }
   }
