--- a/tasiktoto5-amp/index.html
+++ b/tasiktoto5-amp/index.html
@@ -2,22 +2,21 @@
 <html ⚡ lang="id">
   <head>
     <meta charset="utf-8">
-    <title>TASIKTOTO | TASIK TOTO Bandar Slot Gacor & Agen Toto Macau Terbaik</title>
-    <link rel="canonical" href="https://esprit-o.com/">
+    <title>TASIKTOTO ⚡️ TASIK TOTO Trusted Toto Macau Bookie - Online Lottery & Togel Games</title>
+    <link rel="canonical" href="https://anhem88.io/">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-    <meta name="description" content="TASIKTOTO adalah pilihan utama untuk daftar di Bandar Togel Online terpercaya dan agen toto macau terbaik.">
+    <meta name="description" content="TASIKTOTO adalah situs bandar togel online dan Toto Macau terpercaya di Indonesia. Mainkan togel resmi, aman & cepat dengan diskon besar dan jackpot harian.">
     <meta name="author" content="TASIKTOTO">
     <meta name="robots" content="index, follow">
-    <meta name="google-site-verification" content="LKScC-9p0FqlhrbU17l2dwZNJNS2Unber9Y8itOTLjQ">
 
     <!-- AMP runtime -->
     <script async src="https://cdn.ampproject.org/v0.js"></script>
 
     <!-- Open Graph -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="TASIKTOTO | TASIK TOTO Bandar Slot Gacor & Agen Toto Macau Terbaik">
-    <meta property="og:description" content="TASIKTOTO adalah pilihan utama untuk daftar di Bandar Togel Online terpercaya dan agen toto macau terbaik.">
-    <meta property="og:url" content="https://esprit-o.com/">
+    <meta property="og:title" content="TASIKTOTO ⚡️ TASIK TOTO Trusted Toto Macau Bookie - Online Lottery & Togel Games">
+    <meta property="og:description" content="TASIKTOTO adalah situs bandar togel online dan Toto Macau terpercaya di Indonesia. Mainkan togel resmi, aman & cepat dengan diskon besar dan jackpot harian.">
+    <meta property="og:url" content="https://anhem88.io/">
     <meta property="og:image" content="https://i.imgur.com/8VQAZeB.png">
     <meta property="og:site_name" content="TASIKTOTO">
 
@@ -136,7 +135,7 @@
           <a href="https://tasiktoto.pro/alternatif" rel="noopener noreferrer nofollow">DAFTAR</a>
         </div>
 
-<p class="copyright">© copyright 2025 • <a style="color: #00e0fd;" href="https://esprit-o.com/">@TASIKTOTO</a> • 乇丂1306 • All Rights Reserved</p>
+<p class="copyright">© copyright 2025 • <a style="color: #00e0fd;" href="https://anhem88.io/">@TASIKTOTO</a> • 乇丂1306 • All Rights Reserved</p>
     </div>
 </body>
 </html>
