--- a/tasiktoto6-amp/index.html
+++ b/tasiktoto6-amp/index.html
@@ -4,10 +4,10 @@
   <meta name="google-site-verification" content="1NOp4rLjoIskmsCq5UZdgZmuZ_7UPtGua3lBMeUaHX4" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-  <title>TASIKTOTO | TASIKTOTO Akses Cerdas Login & Daftar Nomor #1 di Indonesia</title>
+  <title>TASIKTOTO | TASIK TOTO Bandar Togel Toto Macau Server Thailand Paling Gacor</title>
   <link rel="canonical" href="https://www.tehmobile.com/">
   <link rel="shortcut icon" href="https://siopuh-song.com/favicon.png" type="image/x-icon">
-  <meta name="description" content=" adalah platform togel online dan slot gacor terpercaya yang menjadi pilihan nomor satu di Indonesia. Dengan sistem akses cerdas, pemain dapat dengan mudah melakukan login, daftar, dan bermain tanpa hambatan, kapan pun dan di mana pun.">
+  <meta name="description" content="TASIKTOTO adalah platform togel online dan slot gacor terpercaya yang menjadi pilihan nomor satu di Indonesia. Dengan sistem akses cerdas, pemain dapat dengan mudah melakukan login, daftar, dan bermain tanpa hambatan, kapan pun dan di mana pun.">
   <meta property="og:url" content="https://www.tehmobile.com/">
   <meta property="og:site_name" content="TASIKTOTO">
   <meta property="og:image:alt" content="TASIKTOTO">
@@ -46,7 +46,7 @@
     "@type": "WebSite",
     "name": "TASIKTOTO",
     "url": "https://www.tehmobile.com/",
-    "description": "TASIKTOTO » TASIK TOTO Login Dan Daftar Situs Toto Macau Q-ris 5000. Transaksi cepat, hasil akurat, dan layanan 24 jam nonstop.",
+    "description": "TASIKTOTO adalah platform togel online dan slot gacor terpercaya yang menjadi pilihan nomor satu di Indonesia. Dengan sistem akses cerdas, pemain dapat dengan mudah melakukan login, daftar, dan bermain tanpa hambatan, kapan pun dan di mana pun.",
     "potentialAction": {
       "@type": "SearchAction",
       "target": "https://www.tehmobile.com/search?q={search_term_string}",
