--- a/tasiktoto5-amp/index.html
+++ b/tasiktoto5-amp/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html ⚡ lang="id">
   <head>
+    <meta name="google-site-verification" content="1NOp4rLjoIskmsCq5UZdgZmuZ_7UPtGua3lBMeUaHX4" />
     <meta charset="utf-8">
     <title>TASIKTOTO ⚡️ TASIK TOTO Trusted Toto Macau Bookie - Online Lottery & Togel Games</title>
     <link rel="canonical" href="https://anhem88.io/">
