--- a/tasiktoto5-amp/index.html
+++ b/tasiktoto5-amp/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="google-site-verification" content="1NOp4rLjoIskmsCq5UZdgZmuZ_7UPtGua3lBMeUaHX4" />
     <meta charset="utf-8">
-    <title>TASIKTOTO ⚡️ TASIK TOTO Trusted Toto Macau Bookie - Online Lottery & Togel Games</title>
+    <title>TASIKTOTO ⚡️ TASIK TOTO Bandar Toto Macau Indonesia - Slot Gacor & Togel Games</title>
     <link rel="canonical" href="https://anhem88.io/">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <meta name="description" content="TASIKTOTO adalah situs bandar togel online dan Toto Macau terpercaya di Indonesia. Mainkan togel resmi, aman & cepat dengan diskon besar dan jackpot harian.">
@@ -14,7 +14,7 @@
 
     <!-- Open Graph -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="TASIKTOTO ⚡️ TASIK TOTO Trusted Toto Macau Bookie - Online Lottery & Togel Games">
+    <meta property="og:title" content="TASIKTOTO ⚡️ TASIK TOTO Bandar Toto Macau Indonesia - Slot Gacor & Togel Games">
     <meta property="og:description" content="TASIKTOTO adalah situs bandar togel online dan Toto Macau terpercaya di Indonesia. Mainkan togel resmi, aman & cepat dengan diskon besar dan jackpot harian.">
     <meta property="og:url" content="https://anhem88.io/">
     <meta property="og:image" content="https://i.imgur.com/8VQAZeB.png">
