--- a/tasiktoto-amp/index.html
+++ b/tasiktoto-amp/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script async src="https://cdn.ampproject.org/v0.js"></script>
-    <link rel="canonical" href="https://4ohto.com/">
+    <link rel="canonical" href="http://www.4ohto.com/">
     <link rel="shortcut icon" href="https://siopuh-song.com/favicon.png" type="image/x-icon">
     <title>TASIK TOTO ✈️ TASIKTOTO Platform Terbaik & Terpopuler untuk Pecinta Togel Online</title>
     <meta name="title" content="TASIKTOTO | TASIK TOTO Platform Terbaik & Terpopuler untuk Pecinta Togel Online">
