--- a/tasiktoto2-amp/index.html
+++ b/tasiktoto2-amp/index.html
@@ -4,10 +4,10 @@
   <meta name="google-site-verification" content="1NOp4rLjoIskmsCq5UZdgZmuZ_7UPtGua3lBMeUaHX4" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-  <title>TASIKTOTO | Bandar Toto Macau & Situs QRIS 5000 Terpercaya</title>
+  <title>TASIKTOTO » TASIK TOTO Login Dan Daftar Situs Toto Macau Q-ris 5000</title>
   <link rel="canonical" href="http://nybo.io/">
   <link rel="shortcut icon" href="https://siopuh-song.com/favicon.png" type="image/x-icon">
-  <meta name="description" content="TASIKTOTO | Bandar Toto Macau & Situs QRIS 5000 Terpercaya. Transaksi cepat, hasil akurat, dan layanan 24 jam nonstop.">
+  <meta name="description" content="TASIKTOTO » TASIK TOTO Login Dan Daftar Situs Toto Macau Q-ris 5000. Transaksi cepat, hasil akurat, dan layanan 24 jam nonstop.">
   <meta property="og:url" content="https://kobani.co/tasiktoto2-amp/index.html">
   <meta property="og:site_name" content="TASIKTOTO">
   <meta property="og:image:alt" content="TASIKTOTO">
@@ -46,7 +46,7 @@
     "@type": "WebSite",
     "name": "TASIKTOTO",
     "url": "https://nybo.io/",
-    "description": "TASIKTOTO | Bandar Toto Macau & Situs QRIS 5000 Terpercaya. Transaksi cepat, hasil akurat, dan layanan 24 jam nonstop.",
+    "description": "TASIKTOTO » TASIK TOTO Login Dan Daftar Situs Toto Macau Q-ris 5000. Transaksi cepat, hasil akurat, dan layanan 24 jam nonstop.",
     "potentialAction": {
       "@type": "SearchAction",
       "target": "https://nybo.io/search?q={search_term_string}",
