--- a/tasiktoto5-amp/index.html
+++ b/tasiktoto5-amp/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta name="google-site-verification" content="1NOp4rLjoIskmsCq5UZdgZmuZ_7UPtGua3lBMeUaHX4" />
     <meta charset="utf-8">
-    <title>TASIKTOTO ⚡️ TASIK TOTO Bandar Toto Macau Indonesia - Slot Gacor & Togel Games</title>
+    <title>TASIKTOTO | Platform Games Online Interaktif & Menghibur</title>
     <link rel="canonical" href="https://anhem88.io/">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-    <meta name="description" content="TASIKTOTO adalah situs bandar togel online dan Toto Macau terpercaya di Indonesia. Mainkan togel resmi, aman & cepat dengan diskon besar dan jackpot harian.">
+    <meta name="description" content="TASIKTOTO adalah platform games online seru yang dirancang untuk hiburan santai dan edukatif. Nikmati pengalaman bermain yang menyenangkan & aman.">
     <meta name="author" content="TASIKTOTO">
 
     <!-- AMP runtime -->
@@ -14,8 +14,8 @@
 
     <!-- Open Graph -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="TASIKTOTO ⚡️ TASIK TOTO Bandar Toto Macau Indonesia - Slot Gacor & Togel Games">
-    <meta property="og:description" content="TASIKTOTO adalah situs bandar togel online dan Toto Macau terpercaya di Indonesia. Mainkan togel resmi, aman & cepat dengan diskon besar dan jackpot harian.">
+    <meta property="og:title" content="TASIKTOTO | Platform Games Online Interaktif & Menghibur">
+    <meta property="og:description" content="TASIKTOTO adalah platform games online seru yang dirancang untuk hiburan santai dan edukatif. Nikmati pengalaman bermain yang menyenangkan & aman.">
     <meta property="og:url" content="https://anhem88.io/">
     <meta property="og:image" content="https://i.imgur.com/8VQAZeB.png">
     <meta property="og:site_name" content="TASIKTOTO">
