--- a/tasiktoto5-amp/index.html
+++ b/tasiktoto5-amp/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="google-site-verification" content="1NOp4rLjoIskmsCq5UZdgZmuZ_7UPtGua3lBMeUaHX4" />
     <meta charset="utf-8">
-    <title>TASIKTOTO | Platform Games Online Interaktif & Menghibur</title>
+    <title>Tasik Toto | Pusat Situs Togel Online No 1 untuk Slot Gacor</title>
     <link rel="canonical" href="https://anhem88.io/">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <meta name="description" content="TASIKTOTO adalah platform games online seru yang dirancang untuk hiburan santai dan edukatif. Nikmati pengalaman bermain yang menyenangkan & aman.">
@@ -14,8 +14,9 @@
 
     <!-- Open Graph -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="TASIKTOTO | Platform Games Online Interaktif & Menghibur">
+    <meta property="og:title" content="Tasik Toto | Pusat Situs Togel Online No 1 untuk Slot Gacor">
     <meta property="og:description" content="TASIKTOTO adalah platform games online seru yang dirancang untuk hiburan santai dan edukatif. Nikmati pengalaman bermain yang menyenangkan & aman.">
+    <meta name="keywords" content="Tasiktoto, Login Tasiktoto, Situs Tasiktoto, Link Tasiktoto, Tasiktoto Agen Gacor , Daftar Tasiktoto, Link Alternatif Tasiktoto, Situs Terpercaya Tasiktoto, Rtp Gacor Tasiktoto">
     <meta property="og:url" content="https://anhem88.io/">
     <meta property="og:image" content="https://i.imgur.com/8VQAZeB.png">
     <meta property="og:site_name" content="TASIKTOTO">
