--- a/tasiktoto4-amp/index.html
+++ b/tasiktoto4-amp/index.html
@@ -7,7 +7,7 @@
   <title>TASIKTOTO | TASIK TOTO Bandar Togel Toto Macau Resmi Nomor #1 di Indonesia</title>
   <link rel="canonical" href="https://www.q8you.com">
   <link rel="shortcut icon" href="https://siopuh-song.com/favicon.png" type="image/x-icon">
-  <meta name="description" content="TASIKTOTO adalah bandar Togel Toto Macau resmi dan terpercaya 2025, menyediakan layanan pasang togel online aman, cepat, dan terpercaya untuk semua pemain.">
+  <meta name="description" content="TASIKTOTO merupakan situs Games Online Terpercaya hingga kini mendapatkan predikat terbaik dengan menyediakan berbagai macam permainan, sehingga menciptakan sensasi permainan yang menyenangkan bagi para pengguna.">
   <meta property="og:url" content="https://www.q8you.com">
   <meta property="og:site_name" content="TASIKTOTO">
   <meta property="og:image:alt" content="TASIKTOTO">
@@ -46,7 +46,7 @@
     "@type": "WebSite",
     "name": "TASIKTOTO",
     "url": "http://q8you.com/",
-    "description": "TASIKTOTO | TASIK TOTO Bandar Togel Toto Macau Resmi Nomor #1 di Indonesia",
+    "description": "TASIKTOTO merupakan situs Games Online Terpercaya hingga kini mendapatkan predikat terbaik dengan menyediakan berbagai macam permainan, sehingga menciptakan sensasi permainan yang menyenangkan bagi para pengguna.",
     "potentialAction": {
       "@type": "SearchAction",
       "target": "http://q8you.com//search?q={search_term_string}",
@@ -154,7 +154,7 @@
     </header>
 
     <div class="welcome">
-      <h1>TASIKTOTO Bandar Toto Macau Resmi Terpercaya</h1>
+      <h1>TASIKTOTO Bandar Toto Macau Resmi</h1>
     </div>
 
     <amp-img src="https://i.imgur.com/tVkBvpr.png" width="700" height="500" alt="Banner TASIKTOTO" layout="intrinsic" class="banner"></amp-img>
