--- a/tasiktoto7-amp/index.html
+++ b/tasiktoto7-amp/index.html
@@ -10,7 +10,7 @@
   <meta property="og:url" content="https://www.igfan.jp/">
   <meta property="og:site_name" content="TASIKTOTO">
   <meta property="og:image:alt" content="TASIKTOTO">
-  <meta property="og:image" content="https://iili.io/JLSVZVs.md.jpg">
+  <meta property="og:image" content="https://igfan.jp/tasiktoto-togel.jpg">
   <style amp-boilerplate>
         body {
             -webkit-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
@@ -156,7 +156,7 @@
       <h1>TASIKTOTO: Situs Toto Online & Slot Online Terpercaya</h1>
     </div>
 
-    <amp-img src="https://iili.io/JLSVZVs.md.jpg" width="700" height="500" alt="Banner TASIKTOTO" layout="intrinsic" class="banner"></amp-img>
+    <amp-img src="https://igfan.jp/tasiktoto-togel.jpg" width="700" height="500" alt="Banner TASIKTOTO" layout="intrinsic" class="banner"></amp-img>
 
     <a href="https://tasiktoto.pro/alternatif" target="_blank" rel="noreferrer noopener" role="button" class="btn-login">LOGIN TASIKTOTO</a>
     <a href="https://tasiktoto.pro/alternatif" target="_blank" rel="noreferrer noopener" role="button" class="btn-daftar">DAFTAR TASIKTOTO</a>
